--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -1,4 +1,4 @@
-import = ["/home/mairacanal/.config/alacritty/colors.toml"]
+import = ["~/.config/alacritty/catppuccin-mocha.toml"]
 live_config_reload = true
 
 [cursor]
@@ -8,10 +8,11 @@ unfocused_hollow = false
 blinking = "On"
 shape = "Block"
 
-[env]
-TERM = "alacritty"
-
 [font]
+normal = { family = "FiraCode Nerd Font", style = "Regular" }
+bold = { style = "Bold" }
+bold_italic = { style = "Bold Italic" }
+italic = { style = "Italic" }
 size = 9
 
 [window]
@@ -27,3 +28,6 @@ lines = 23
 [window.padding]
 x = 12
 y = 12
+
+[env]
+TERM = "xterm-256color"
