--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -1,5 +1,3 @@
-import = ["~/.config/alacritty/catppuccin-mocha.toml"]
-live_config_reload = true
 
 [cursor]
 unfocused_hollow = false
@@ -31,3 +29,7 @@ y = 12
 
 [env]
 TERM = "xterm-256color"
+
+[general]
+live_config_reload = true
+import = ["~/.config/alacritty/catppuccin-mocha.toml"]
